<resources>
    <string name="app_name">Cat Care</string>
    <string name="home_automation">Home Automation</string>
    <string name="my_profile">My Profile</string>
    <string name="jhon_allen">Jhon Allen</string>
    <string name="_64_years">64 years</string>
    <string name="reading_assistant">Reading Assistant</string>
    <string name="journey_planner">Journey Planner</string>
    <string name="reminder">Reminder</string>
    <string name="button">Button</string>
    <string name="ocr">OCR</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="share_using">Share OCR Results with others.</string>
    <string name="image_preview">Image Preview</string>
    <string name="text_magnifier">Text Magnifier</string>
    <string name="_thumb_text_ocr">Pick an image to recognise text.</string>
    <string name="_task_reminder">Task Reminder</string>
    <string name="all_tasks">All tasks</string>
    <string name="add_tasks">Add Tasks</string>
    <string name="empty_add_some_tasks">Empty, Add some tasks.</string>
    <string name="add_a_task">Add a task</string>
    <string name="imageView">ImageView</string>
    <string name="task_description">Fill the details below to add a task into your TODO</string>
    <string name="task_title">Task title</string>
    <string name="_task_description">Task description</string>
    <string name="task_date">Task date</string>
    <string name="task_time">Task time</string>
    <string name="add_an_event">Add an event</string>
    <string name="add_task">Add task</string>
    <string name="_edittext">editText</string>
    <string name="_type_here">Type here…</string>
    <string name="completed">COMPLETED</string>
    <string name="congrats_you_have_completed_the_task_successfully">Congrats!\nYou have completed the task successfully.</string>
    <string name="_close">Close</string>
    <string name="done">Done</string>
    <string name="delete_confirmation">Confirmation</string>
    <string name="sureToDelete">Are you sure you want to delete the task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Completed the task!</string>
    <string name="sureToMarkAsComplete">Are you sure you want to mark this task as completed?</string>
    <string name="_confirmation">Confirmation!</string>
    <string name="_yes">Yes</string>
    <string name="_no">No</string>
    <string name="AlarmInfo">Alarm Info</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="show_password">Show Password</string>
    <string name="i_forgot_password">I forgot password!</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign UP</string>
    <string name="sign_in_to_continue">sign in to continue</string>
    <string name="type_here">Type Here.....</string>
    <string name="signup">SignUp</string>
    <string name="add_image">Add Image</string>
    <string name="_your_name">Your Name</string>
    <string name="jan_01_1974">JAN 01 1974</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="your_date_of_birth">Your Date of Birth</string>
    <string name="recoverPass">Recover Password</string>
    <string name="_select_an_option">Select an Option</string>
    <string name="hide_password">Hide Password</string>
    <string name="congratulations">Congratulations!</string>
    <string name="statementCong">Your Password is successfully recovered!</string>
    <string name="statementCong_2">Password:</string>
    <string name="copyPass">Copy</string>
    <string name="logout">Sign Out</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="led_1">ROOM 1 LED</string>
    <string name="led_2">ROOM 2 LED</string>
    <string name="fire_status">Fire Alarm</string>
    <string name="motion_status">Burglar Alarm</string>
    <string name="lpg_status">Gas Alarm</string>
    <string name="_navigate_in_google_maps">Navigate in Google Maps</string>
    <string name="_this_request_needs_to_be_passed_in_the_google_app">This request needs to be passed in the Google App</string>
    <string name="_request_to_app">Request to App</string>
</resources>