<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imageView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_alarm_add"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="@string/add_a_task"
            android:textColor="@color/smoky_black"
            android:textSize="@dimen/_20ssp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/task_description"
            android:fontFamily="@font/montserrat"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginStart="3dp"
            android:fontFamily="@font/montserrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/task_title"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_type_here"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="@dimen/_10sdp"
            android:id="@+id/addTaskTitle"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginStart="3dp"
            android:fontFamily="@font/montserrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/_task_description"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_type_here"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="@dimen/_10sdp"
            android:id="@+id/addTaskDescription"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginStart="3dp"
            android:fontFamily="@font/montserrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/task_date"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_type_here"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="@dimen/_10sdp"
            android:id="@+id/taskDate"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginStart="3dp"
            android:fontFamily="@font/montserrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/task_time"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:hint="@string/_type_here"
            android:background="@drawable/btn_border"
            android:padding="@dimen/_10sdp"
            android:id="@+id/taskTime"
            tools:ignore="MissingPrefix" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddTask"
            app:cornerRadius="@dimen/_10sdp"
            android:text="@string/add_task"
            android:fontFamily="@font/montserrat_medium"
            android:backgroundTint="@color/jelly_been_blue"
            android:textColor="@color/lotion"
            android:layout_marginTop="40dp" />

    </LinearLayout>
</ScrollView>