<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    android:id="@+id/layoutShowPassContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog">
    <TextView
        android:id="@+id/tvTopDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/jelly_been_blue"
        android:textSize="@dimen/_14ssp"
        android:text="@string/recoverPass"
        android:gravity="center"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvCongDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:textColor="@color/beer"
        android:textSize="@dimen/_20ssp"
        android:text="@string/congratulations"
        android:gravity="center"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTopDialog"
        />

    <TextView
        android:id="@+id/tvConRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/smoky_black"
        android:textSize="@dimen/_14ssp"
        android:text="@string/statementCong"
        android:gravity="center"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCongDialog"
        />
    <TextView
        android:id="@+id/tvConRec2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_20sdp"
        android:textColor="@color/smoky_black"
        android:textSize="@dimen/_12ssp"
        android:text="@string/statementCong_2"
        android:gravity="start"
        android:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConRec"
        />
    <TextView
        android:id="@+id/tvRecPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/smoky_black"
        android:textSize="@dimen/_14ssp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:text="@string/statementCong_2"
        android:gravity="start"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toTopOf="@id/tvConRec2"
        app:layout_constraintBottom_toBottomOf="@id/tvConRec2"
        app:layout_constraintStart_toEndOf="@id/tvConRec2"
        app:layout_constraintEnd_toEndOf="parent"
        />



    <View
        android:id="@+id/viewCenterRec"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecPass" />

    <Button
        android:id="@+id/btnCopyPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:backgroundTint="@color/sea_green"
        android:fontFamily="@font/montserrat"
        android:text="@string/copyPass"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/viewCenterRec"
        app:layout_constraintStart_toEndOf="@+id/viewCenterRec"
        app:layout_constraintTop_toTopOf="@id/viewCenterRec" />


    <Button
        android:id="@+id/btnCloseRec"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dim_gray"
        android:fontFamily="@font/montserrat"
        android:text="@string/_no"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/viewCenterRec"
        app:layout_constraintEnd_toStartOf="@+id/viewCenterRec"
        app:layout_constraintTop_toTopOf="@id/viewCenterRec" />
</androidx.constraintlayout.widget.ConstraintLayout>