<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_20sdp"
    android:background="@drawable/bg_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvTopDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/jelly_been_blue"
        android:textSize="@dimen/_14ssp"
        android:text="@string/_navigate_in_google_maps"
        android:gravity="center"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvBodyDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:textColor="@color/smoky_black"
        android:textSize="@dimen/_12ssp"
        android:textAlignment="center"
        android:text="@string/_this_request_needs_to_be_passed_in_the_google_app"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintStart_toStartOf="@id/tvTopDialog"
        app:layout_constraintEnd_toEndOf="@id/tvTopDialog"
        app:layout_constraintTop_toBottomOf="@id/tvTopDialog"
        />
    <Button
        android:id="@+id/btnOpenAppGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:backgroundTint="@color/sea_green"
        android:fontFamily="@font/montserrat"
        android:text="@string/_request_to_app"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/tvBodyDialog"
        app:layout_constraintEnd_toEndOf="@id/tvBodyDialog"
        app:layout_constraintTop_toBottomOf="@id/tvBodyDialog"
        />
</androidx.constraintlayout.widget.ConstraintLayout>