<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_20sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/tvTopDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/jelly_been_blue"
        android:textSize="@dimen/_14ssp"
        android:text="@string/_select_an_option"
        android:gravity="center"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:id="@+id/viewCenter"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@android:color/transparent"
        android:layout_marginVertical="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tvTopDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvCameraProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/camera"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textColor="@color/smoky_black"
        android:textSize="@dimen/_14ssp"
        app:drawableTopCompat="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/viewCenter"
        app:layout_constraintEnd_toStartOf="@+id/viewCenter"
        app:layout_constraintTop_toTopOf="@id/viewCenter" />

    <TextView
        android:id="@+id/tvGalleryProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/gallery"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textColor="@color/smoky_black"
        android:textSize="@dimen/_14ssp"
        app:drawableTopCompat="@drawable/ic_gallery"
        app:layout_constraintStart_toEndOf="@id/viewCenter"
        app:layout_constraintBottom_toBottomOf="@id/viewCenter"
        app:layout_constraintTop_toTopOf="@id/viewCenter" />
</androidx.constraintlayout.widget.ConstraintLayout>