<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RecoverPasswordActivity">
    <View
        android:id="@+id/viewTopResetPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/bg_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/_10sdp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/button"
        app:layout_constraintTop_toTopOf="@id/viewTopResetPass"
        app:layout_constraintBottom_toBottomOf="@id/viewTopResetPass"
        app:layout_constraintStart_toStartOf="@id/viewTopResetPass"/>
    <TextView
        android:id="@+id/tvHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recoverPass"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/lotion"
        android:textSize="@dimen/_17ssp"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintStart_toStartOf="@id/viewTopResetPass"
        app:layout_constraintEnd_toEndOf="@id/viewTopResetPass"
        app:layout_constraintBottom_toBottomOf="@id/viewTopResetPass"
        app:layout_constraintTop_toTopOf="@id/viewTopResetPass"/>
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:src="@drawable/cat_care_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTopResetPass"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_55sdp"
        android:background="@drawable/bg_cardview"
        android:elevation="@dimen/_3sdp"
        android:padding="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@android:style/Widget.Holo.TextView.SpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:padding="@dimen/_5sdp"
                android:text="@string/your_email"
                android:textColor="@color/smoky_black"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/getEmailEtRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"
                android:autofillHints="Email"
                android:background="@drawable/outline_et"
                android:elevation="@dimen/_3sdp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/type_here"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/smoky_black" />

            <Button
                android:id="@+id/btnRecoverPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_12sdp"
                android:backgroundTint="@color/jelly_been_blue"
                android:elevation="@dimen/_3sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/recoverPass"
                android:textColor="@color/lotion"
                app:cornerRadius="@dimen/_10sdp"
                app:textAllCaps="true" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>